--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -15,31 +15,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Configure GitHub Pages
-        id: configure
-        uses: actions/configure-pages@v5
       - run: rustup target add wasm32-unknown-unknown
-      - uses: cargo-bins/cargo-binstall@main
-      - run: cargo binstall --no-confirm trunk
-      - run: trunk build --public-url '${{ steps.configure.outputs.base_url }}'
+      - run: sudo dnf install -y trunk
+      - run: trunk build --public-url 'https://tau.garden/egui-theme-switch'
         working-directory: demo
-      - name: Upload GitHub Pages artifact
-        uses: actions/upload-pages-artifact@v3
+      - uses: https://codeberg.org/tautropfli/websites/upload-package@main
+        if: format('refs/heads/{0}', forgejo.event.repository.default_branch) == forgejo.ref
         with:
-          path: demo/dist
-
-  pages:
-    name: Deploy to GitHub Pages
-    needs: build
-    permissions:
-      pages: write
-      id-token: write
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    if: format('refs/heads/{0}', github.event.repository.default_branch) == github.ref
-    steps:
-    - name: Deploy to GitHub Pages
-      id: deployment
-      uses: actions/deploy-pages@v4
+          domain_name: tau.garden
+          subpath: egui-theme-switch
+          package_push_token: ${{secrets.PACKAGE_PUSH_TOKEN}}
+          directory: demo/dist
+      - uses: https://codeberg.org/tautropfli/websites/deploy@main
+        if: format('refs/heads/{0}', forgejo.event.repository.default_branch) == forgejo.ref
+        with:
+          dispatch_token: ${{secrets.DISPATCH_TOKEN}}
