--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -12,7 +12,7 @@ env:
 jobs:
   build:
     name: Build Demo
-    runs-on: ubuntu-latest
+    runs-on: fedora-latest
     steps:
       - uses: actions/checkout@v4
       - run: rustup target add wasm32-unknown-unknown
