--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -16,6 +16,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: sudo dnf install -y trunk rustup
+      - run: rustup-init
       - run: rustup target add wasm32-unknown-unknown
       - run: trunk build --public-url 'https://tau.garden/egui-theme-switch'
         working-directory: demo
