--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -15,8 +15,7 @@ jobs:
     runs-on: fedora-latest
     steps:
       - uses: actions/checkout@v4
-      - run: sudo dnf install -y trunk rustup
-      - run: rustup-init
+      - run: sudo dnf install -y trunk
       - run: rustup target add wasm32-unknown-unknown
       - run: trunk build --public-url 'https://tau.garden/egui-theme-switch'
         working-directory: demo
