--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ env:
 jobs:
   pre-build:
     name: Pre-Build
-    runs-on: ubuntu-latest
+    runs-on: fedora-latest
     outputs:
       rust-version: ${{ steps.rust-version.outputs.rust-version }}
     steps:
@@ -27,7 +27,7 @@ jobs:
   build:
     needs: pre-build
     name: ${{ format('Build ({0})', matrix.rust-version) }}
-    runs-on: ubuntu-latest
+    runs-on: fedora-latest
     strategy:
       matrix:
         rust-version:
@@ -42,7 +42,7 @@ jobs:
 
   docs:
     name: Docs
-    runs-on: ubuntu-latest
+    runs-on: fedora-latest
     steps:
       - uses: actions/checkout@v4
       - run: rustup override set nightly
@@ -52,7 +52,7 @@ jobs:
           RUSTDOCFLAGS: -Dwarnings
 
   lint:
-    runs-on: ubuntu-latest
+    runs-on: fedora-latest
     name: Lint
     steps:
       - uses: actions/checkout@v4
@@ -68,7 +68,7 @@ jobs:
     name: Test
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [fedora-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
@@ -79,7 +79,7 @@ jobs:
 
   test_package:
     name: Test Package
-    runs-on: ubuntu-latest
+    runs-on: fedora-latest
     steps:
       - uses: actions/checkout@v4
       - name: Package
