--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,13 @@ jobs:
       rust-version: ${{ steps.rust-version.outputs.rust-version }}
     steps:
       - uses: actions/checkout@v4
+      - name: Cache cargo stuff
+        uses: actions/cache@v4
+        with:
+          key: ${{ runner.os }}-cargo
+          path: |
+            ~/.cargo
+            ~/.rustup
       - name: Determine Rust Version
         id: rust-version
         run: |
@@ -34,6 +41,13 @@ jobs:
           ["${{needs.pre-build.outputs.rust-version}}", stable, nightly]
     steps:
       - uses: actions/checkout@v4
+      - name: Cache cargo stuff
+        uses: actions/cache@v4
+        with:
+          key: ${{ runner.os }}-cargo
+          path: |
+            ~/.cargo
+            ~/.rustup
       - name: Use Rust ${{matrix.rust-version}}
         if: matrix.rust-version != 'stable'
         run: rustup override set '${{matrix.rust-version}}'
@@ -45,6 +59,13 @@ jobs:
     runs-on: fedora-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Cache cargo stuff
+        uses: actions/cache@v4
+        with:
+          key: ${{ runner.os }}-cargo
+          path: |
+            ~/.cargo
+            ~/.rustup
       - run: rustup override set nightly
       - name: Build Docs
         run: cargo doc --workspace --all-features --no-deps
@@ -56,6 +77,13 @@ jobs:
     name: Lint
     steps:
       - uses: actions/checkout@v4
+      - name: Cache cargo stuff
+        uses: actions/cache@v4
+        with:
+          key: ${{ runner.os }}-cargo
+          path: |
+            ~/.cargo
+            ~/.rustup
       - run: rustup update stable && rustup default stable
       - run: rustup component add rustfmt
       - name: Check format
@@ -72,6 +100,13 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
+      - name: Cache cargo stuff
+        uses: actions/cache@v4
+        with:
+          key: ${{ runner.os }}-cargo
+          path: |
+            ~/.cargo
+            ~/.rustup
       - name: Run tests on all targets
         run: cargo test --workspace --all-targets --all-features
       - name: Run doc tests
@@ -82,6 +117,13 @@ jobs:
     runs-on: fedora-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Cache cargo stuff
+        uses: actions/cache@v4
+        with:
+          key: ${{ runner.os }}-cargo
+          path: |
+            ~/.cargo
+            ~/.rustup
       - name: Package
         run: cargo package -p egui-theme-switch
       - name: Test Package
