--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,7 +62,7 @@ jobs:
         run: cargo fmt -- --check
       - name: Run clippy
         run: cargo clippy --workspace --all-targets --all-features -- --deny warnings
-      - uses: EmbarkStudios/cargo-deny-action@v2
+      - uses: https://github.com/EmbarkStudios/cargo-deny-action@v2
 
   test:
     name: Test
