--- a/.forgejo/workflows/ci.yml
+++ b/.forgejo/workflows/ci.yml
@@ -66,10 +66,7 @@ jobs:
 
   test:
     name: Test
-    strategy:
-      matrix:
-        os: [fedora-latest, macos-latest, windows-latest]
-    runs-on: ${{ matrix.os }}
+    runs-on: fedora-latest
     steps:
       - uses: actions/checkout@v4
       - name: Run tests on all targets
